datepicker was cutting off months, now fixed

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -260,6 +260,10 @@
     background-color: #FFD54F;
 }
 
+.datepicker-controls .select-month input {
+    width: 90%;
+}
+
 /*.datepicker-day-button > .is-disabled {*/
 /*    color: grey!important;*/
 /*}*/
